examples/test/testpolicy11326.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11326
  namespace: namespace442
spec:
  podSelector:
    matchLabels:
      key16: value10
      key13: value3
      key24: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value23
          key25: value4
          key19: value33
      podSelector:
        matchLabels:
          key7: value28
          key32: value47
          key27: value10
